tests/script_errors/sub_overflow/error.txt
Error: 
    2 | 0 - unsigned::max;
      | ^^^^^^^^^^^^^^^^^ The binary operation `-` caused an over- or underflow